feat(channel): Phase 22 Batch 4 — 6 new channel root layer files
- AckReactions: scope-based ack reaction gating with WhatsApp mode support
- ConversationLabel: label resolution from message context fields
- SenderIdentity: sender field validation (E.164, username format)
- ReplyPrefix: response prefix context with model selection updates
- ChannelSession: fire-and-forget inbound session recording
- ChannelConfigMatch: config entry matching with slug normalization and wildcards
- Fix: ChannelPluginHelpers Java 17 compatibility (getFirst → get(0))